<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cross"
    android:backgroundTint="@color/colorPrimary"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:contentDescription="@null"
        android:elevation="8dp"
        android:scaleType="fitXY"
        android:src="@drawable/cross"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/colorPrimary" />

    <CheckBox
        android:id="@+id/toggle_decor_fit_system_windows"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="1dp"
        android:text="@string/decor_fit_system_windows"
        app:layout_constraintBottom_toTopOf="@id/toggle_caption_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <CheckBox
        android:id="@+id/toggle_caption_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="1dp"
        android:text="@string/caption_bar"
        app:layout_constraintBottom_toTopOf="@id/toggle_ime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>

    <CheckBox
        android:id="@+id/toggle_ime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:elevation="1dp"
        android:text="@string/ime"
        app:layout_constraintBottom_toTopOf="@id/toggle_mandatory_system_gestures"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toggle_caption_bar" />

    <CheckBox
        android:id="@+id/toggle_mandatory_system_gestures"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:elevation="1dp"
        android:text="@string/mandatory_system_gestures"
        app:layout_constraintBottom_toTopOf="@id/toggle_status_bars"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toggle_ime" />

    <CheckBox
        android:id="@+id/toggle_status_bars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:elevation="1dp"
        android:text="@string/status_bars"
        app:layout_constraintBottom_toTopOf="@id/toggle_system_bars"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toggle_mandatory_system_gestures" />

    <CheckBox
        android:id="@+id/toggle_system_bars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:elevation="1dp"
        android:text="@string/system_bars"
        app:layout_constraintBottom_toTopOf="@id/toggle_system_gestures"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toggle_status_bars" />

    <CheckBox
        android:id="@+id/toggle_system_gestures"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:elevation="1dp"
        android:text="@string/system_gestures"
        app:layout_constraintBottom_toTopOf="@id/toggle_tappable_element"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toggle_system_bars" />

    <CheckBox
        android:id="@+id/toggle_tappable_element"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:elevation="1dp"
        android:text="@string/tappable_element"
        app:layout_constraintBottom_toTopOf="@+id/edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toggle_system_gestures" />

    <TextView
        android:id="@+id/edit_text_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/edit_text"
        android:text="@string/input_label"
        app:layout_constraintBaseline_toBaselineOf="@id/edit_text"
        app:layout_constraintEnd_toStartOf="@id/edit_text"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/inset_types"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="toggle_caption_bar, toggle_ime, toggle_mandatory_system_gestures, toggle_status_bars, toggle_system_bars, toggle_system_gestures, toggle_tappable_element" />

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="1dp"
        android:importantForAutofill="no"
        android:inputType="text"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edit_text_label"
        app:layout_constraintTop_toBottomOf="@id/toggle_tappable_element" />

</androidx.constraintlayout.widget.ConstraintLayout>